<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_drive_arduino</name>
  <version>1.0.0</version>
  <description>`ros2_control` hardware for 4WD Robot.</description>

  <maintainer email="edwardyoung2001@btinternet.com">Edward Young</maintainer>
  <author email="edwardyoung2001@btinternet.com">Edward Young</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
